--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <p><H3></H3>Professor: Luiz Gustavo</H3</p>
 <p>Objetivos: Este componente aborda a interação dinâmica entre a Geração Digital, a sociedade contemporânea e os avanços tecnológicos que caracterizam o século XXI. Seu objetivo é desenvolver a compreensão dessa convivência complexa e como eles se influenciam mutuamente. Motiva os alunos a refletirem sobre as tecnologias onipresentes em suas vidas cotidianas, promovendo a responsabilidade no uso e produção de informações, estimulando a análise crítica e gerando consciência sobre os impactos sociais e éticos das escolhas tecnológicas. O intuito é capacitar os alunos a se tornarem cidadãos informados e conscientes na era digital, permitindo-lhes compreender as dinâmicas entre indivíduos, sociedade e tecnologia em um contexto marcado pela Geração Digital e por suas particularidades no século XXI.</p>
 <p>Conteúdos programáticos:</p>
-  <OL>
-<LI> 1° bimestre
-<LI> 2° bimestre
-<LI> 3° bimestre
-<LI> 4° bimestre
-</OL>
+  <ul style="list-style-type: none;">
+    <li>1° bimestre</li>
+    <li>2° bimestre</li>
+    <li>3° bimestre</li>
+    <li>4° bimestre</li>
+</ul>
 
 </body>
 </html>
