--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <CENTER>
 <H1> CONECTANDO INDIVÍDUO, SOCIEDADE E TECNOLOGIA </H1>
 </CENTER>
-<p><H3></H3>Professor: Luiz Gustavo</H3</p>
+<H3></H3>Professor: Luiz Gustavo</H3
 <p>Objetivos: Este componente aborda a interação dinâmica entre a Geração Digital, a sociedade contemporânea e os avanços tecnológicos que caracterizam o século XXI. Seu objetivo é desenvolver a compreensão dessa convivência complexa e como eles se influenciam mutuamente. Motiva os alunos a refletirem sobre as tecnologias onipresentes em suas vidas cotidianas, promovendo a responsabilidade no uso e produção de informações, estimulando a análise crítica e gerando consciência sobre os impactos sociais e éticos das escolhas tecnológicas. O intuito é capacitar os alunos a se tornarem cidadãos informados e conscientes na era digital, permitindo-lhes compreender as dinâmicas entre indivíduos, sociedade e tecnologia em um contexto marcado pela Geração Digital e por suas particularidades no século XXI.</p>
 <p>Conteúdos programáticos:</p>
   <ul style="list-style-type: none;">
