--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<title>CONECTANDO INDIVÍDUO, SOCIEDADE E TECNOLOGIA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CONECTANDO INDIVÍDUO, SOCIEDADE E TECNOLOGIA</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        p {
+            margin: 15px 0;
+            color: #555;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            background: #e2e2e2;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-<CENTER>
-<H1> CONECTANDO INDIVÍDUO, SOCIEDADE E TECNOLOGIA </H1>
-</CENTER>
-<p></H3>Professor: Luiz Gustavo</p>
-<p>Objetivos: Este componente aborda a interação dinâmica entre a Geração Digital, a sociedade contemporânea e os avanços tecnológicos que caracterizam o século XXI. Seu objetivo é desenvolver a compreensão dessa convivência complexa e como eles se influenciam mutuamente. Motiva os alunos a refletirem sobre as tecnologias onipresentes em suas vidas cotidianas, promovendo a responsabilidade no uso e produção de informações, estimulando a análise crítica e gerando consciência sobre os impactos sociais e éticos das escolhas tecnológicas. O intuito é capacitar os alunos a se tornarem cidadãos informados e conscientes na era digital, permitindo-lhes compreender as dinâmicas entre indivíduos, sociedade e tecnologia em um contexto marcado pela Geração Digital e por suas particularidades no século XXI.</p>
-<p>Conteúdos programáticos:</p>
-  <ul style="list-style-type: none;">
-    <li>1° bimestre</li>
-    <li>2° bimestre</li>
-    <li>3° bimestre</li>
-    <li>4° bimestre</li>
-</ul>
-
+    <h1>CONECTANDO INDIVÍDUO, SOCIEDADE E TECNOLOGIA</h1>
+    <p><strong>Professor:</strong> Luiz Gustavo</p>
+    <p><strong>Objetivos:</strong> Este componente aborda a interação dinâmica entre a Geração Digital, a sociedade contemporânea e os avanços tecnológicos que caracterizam o século XXI. Seu objetivo é desenvolver a compreensão dessa convivência complexa e como eles se influenciam mutuamente. Motiva os alunos a refletirem sobre as tecnologias onipresentes em suas vidas cotidianas, promovendo a responsabilidade no uso e produção de informações, estimulando a análise crítica e gerando consciência sobre os impactos sociais e éticos das escolhas tecnológicas. O intuito é capacitar os alunos a se tornarem cidadãos informados e conscientes na era digital, permitindo-lhes compreender as dinâmicas entre indivíduos, sociedade e tecnologia em um contexto marcado pela Geração Digital e por suas particularidades no século XXI.</p>
+    <p><strong>Conteúdos programáticos:</strong></p>
+    <ul>
+        <li>1° bimestre</li>
+        <li>2° bimestre</li>
+        <li>3° bimestre</li>
+        <li>4° bimestre</li>
+    </ul>
 </body>
 </html>
