--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             padding: 10px;
             border-radius: 5px;
         }
+        a {
+            color: #007BFF; /* Cor do link */
+            text-decoration: none; /* Remove o sublinhado */
+        }
+        a:hover {
+            text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+        }
     </style>
 </head>
 <body>
